# goit-pythonweb-hw-06

./: README.md  connect.py  models.py  my_select.py  pyproject.toml  seeds.py
migrations/: env.py
migrations/versions/: f2418c63ceb3_initial_migration.py
